<resources>
    <string name="app_name">BinhLuanBongDa</string>
    <string name="title_name">91Phut.link</string>
    <string name="tab_text_1">Hôm qua</string>
    <string name="tab_text_2">Hôm nay</string>
    <string name="tab_text_3">Ngày mai</string>
    <string name="tab_text_watch1">Trực tiếp</string>
    <string name="tab_text_watch2">Thống kê</string>
    <string name="tab_text_watch3">Đội hình</string>
    <string name="tab_text_watch4">Xếp hạng</string>
    <string name="tab_text_watch5">Lịch sử</string>
    <string name="tab_text_watch6">Soi cầu</string>

    <string name="xem_ngay">Xem Ngay</string>
    <string name="t_c_c">Đặt Cược</string>
    <string name="alert_error_network">Network Error</string>
    <string name="idStream">id_stream_match</string>
    <string name="error_empty_match">Trận đấu hiện tại chưa diễn ra hoặc link play bị lỗi! Vui lòng thử lại.</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">football</string>
    <string name="tructiepbongda">TRỰC TIẾP BÓNG ĐÁ MIỄN PHÍ NHANH NHẤT</string>
    <string name="xembongdatructuyen">Xem bóng đá trực tuyến với đường truyền tốc độ cao, không lag giật tất cả các trận đấu lớn nhỏ trên toàn cầu.</string>
    <string name="have_acount">Đã có tài khoản? <b>Đăng nhập</b></string>
    <string name="login">Đăng nhập</string>
    <string name="mota_login">Huynh đài cần đăng nhập để tham gia bình luận và sử dụng các tính năng nâng cao của Vebo nhé.</string>
    <string name="mota_register">Nhập các thông tin đăng ký mới nhé.</string>
    <string name="hint_account_pass">Tên tài khoản / Mật khẩu</string>
    <string name="hint_account">Tên tài khoản</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="loss_password">Quên mật khẩu?</string>
    <string name="create_new_account">Đăng ký tài khoản mới</string>
    <string name="hint_gmail">Tài khoản gmail</string>
    <string name="hint_password_again">Nhập lại mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="mota_loss_pass">Hệ thống sẽ gửi xác nhận vào email của bạn</string>
    <string name="watch_live">Trực tiếp</string>
    <string name="matchs">Giải đấu</string>
    <string name="favorite">Yêu thích</string>
    <string name="text_number_match">Trận</string>
    <string name="text_thb_match">T - H - B</string>
    <string name="text_hieuso_match">HS</string>
    <string name="text_point_match">Điểm</string>
    <string name="team_1st">Vô địch</string>
    <string name="team_2nd">Thứ 2</string>
    <string name="text_tab_live">Đang diễn ra</string>
    <string name="text_tab_all">Tất cả</string>
    <string name="text_tab_end">Đã kết thúc</string>
    <string name="close_chat">Tắt chat</string>
    <string name="open_chat">Chat</string>
    <string name="text_start_progress_match">Trận đấu bắt đầu</string>
</resources>