<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_live"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/watch_live"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_leagues"
        android:enabled="true"
        android:icon="@drawable/league"
        android:title="@string/matchs"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:enabled="true"
        android:icon="@drawable/star"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_soikeo"
        android:enabled="true"
        android:icon="@drawable/news"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_more"
        android:enabled="true"
        android:icon="@drawable/more"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
</menu>