<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_thumb"
    android:orientation="vertical"
    android:padding="@dimen/_25sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_alignParentBottom="true"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <com.ctrlplusz.anytextview.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/sansbold"
            android:text="@string/tructiepbongda"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sdp" />

        <com.ctrlplusz.anytextview.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sansre"
            android:text="@string/xembongdatructuyen"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/watch_now"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_45sdp"
            android:background="@drawable/border_radius_button"
            android:fontFamily="@font/sansbold"
            android:text="@string/xem_ngay"
            android:textColor="@color/background_key_color"
            android:textSize="@dimen/_16sdp" />


    </LinearLayout>

    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/have_acount"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp" />
</LinearLayout>