<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_key_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/header_login" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:src="@drawable/ic_arrow_back_black_36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_25sdp"
            android:fontFamily="@font/sansbold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sdp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="@dimen/_25sdp">

        <com.ctrlplusz.anytextview.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sansre"
            android:text="@string/mota_login"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/border_radius_edittext"
            android:fontFamily="@font/sansre"
            android:hint="@string/hint_account_pass"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_edit_text_color" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/border_radius_edittext"
            android:fontFamily="@font/sansre"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_edit_text_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/border_radius_button"
            android:fontFamily="@font/sansbold"
            android:text="@string/login"
            android:textColor="@color/background_key_color"
            android:textSize="@dimen/_16sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_login_gapo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/_20sdp"
                android:scaleType="center"
                android:src="@drawable/login_gapo" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_login_google"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/login_google" />
        </LinearLayout>

    </LinearLayout>

    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/tv_loss_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/sansre"
        android:text="@string/loss_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp" />

    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/tv_create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/sansre"
        android:text="@string/create_new_account"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp" />
</LinearLayout>